Fix home page for BS4

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
 {% block content %}
 <!-- Main component for a primary marketing message or call to action -->
 <div class="jumbotron">
-  <h1>Bienvenue !</h1>
-  <p>
+  <h1 class="display-3">Bienvenue !</h1>
+  <p class="lead">
     {% if user.is_authenticated %}
       Sélectionnez votre association parmi la liste ci-dessus avant de poursuivre.
     {% else %}
