Upgrade situation administrative for BS4

--- a/templates/association/requirement/admin_list.html
+++ b/templates/association/requirement/admin_list.html
@@ -1,26 +1,28 @@
 {% extends 'base.html' %}
 
 {% block page_title %}
-  Situation administrative
+    Situation administrative
 {% endblock %}
 
 {% block page_sub_title %}
-  Liste des critères
+    Liste des critères
 {% endblock %}
 
 {% block content %}
-  <table id="prettyTable" class="table table-bordered table-stripped">
-    <thead>
-      <tr>
-        <th>Nom</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for requirement in object_list %}
-        <tr>
-          <td><a href="{% url 'requirement-detail' requirement.id %}">{{ requirement.name }}</a></td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+    <div class="row">
+        <table id="prettyTable" class="table table-bordered table-stripped">
+            <thead>
+            <tr>
+                <th>Nom</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for requirement in object_list %}
+                <tr>
+                    <td><a href="{% url 'requirement-detail' requirement.id %}">{{ requirement.name }}</a></td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
