--- a/templates/base.html
+++ b/templates/base.html
@@ -172,12 +172,12 @@
     {% endif %}
 
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-12">
             <h1>
                 {% block page_title %}{% endblock %}
                 <small>{% block page_sub_title %}{% endblock %}</small>
 
-                <div class="btn-group pull-right" role="group" aria-label="...">
+                <div class="btn-group float-right" role="group" aria-label="...">
                     <div class="btn-group" role="group">
                         {% block quick_actions %}{% endblock %}
                     </div>
