--- a/templates/file/files/delete.html
+++ b/templates/file/files/delete.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'association-file-tree' association.id object.folder.id %}" class="btn btn-default">Annuler</a>
+  <a href="{% url 'association-file-tree' association.id object.folder.id %}" class="btn btn-secondary">Annuler</a>
 {% endblock %}
 
 {% block content %}
