--- a/templates/file/files/tree.html
+++ b/templates/file/files/tree.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content_association %}
-    <table class="table table-stripped table-hover">
+    <table class="table table-hover">
         {% if current_folder %}
             {% if current_folder.parent %}
                 <tr>
