Move public botinsa to better suited location

--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -14,8 +14,7 @@
 
 {% block content %}
     <div class="card-columns">
-        {% for asso in object_list %}
-
+        {% for asso in associations %}
             <div class="card">
                 <img class="card-img-top" src="https://portail.asso-insa-lyon.fr/file/12/" alt="...">
                 <div class="card-body">
