--- a/templates/directory/publish.html
+++ b/templates/directory/publish.html
@@ -5,19 +5,19 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'association-directory-detail' association.id %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
+  <a href="{% url 'association-directory-detail' association.id %}" class="btn btn-secondary"><i class="fa fa-times"></i> Annuler</a>
 {% endblock %}
 
 {% block content_association %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-success" role="alert">
         Êtes-vous sûr de vouloir publier la dernière version du Bot'INSA pour cette association ?
       </div>
       <form action="" method="post">
         {% csrf_token %}
         <p class="text-center">
-          <input class="btn btn-default" type="submit" value="Confirmer la publication" />
+          <button class="btn btn-success" type="submit">Confirmer la publication</button>
         </p>
       </form>
     </div>
