--- a/templates/newsletter/article/update.html
+++ b/templates/newsletter/article/update.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'association-article-detail' association.id object.id %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
+  <a href="{% url 'association-article-detail' association.id object.id %}" class="btn btn-secondary"><i class="fa fa-times"></i> Annuler</a>
   <button form="articleForm" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
 {% endblock %}
 
