--- a/templates/association/delete.html
+++ b/templates/association/delete.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'association-list' %}" class="btn btn-default">Annuler</a>
+  <a href="{% url 'association-list' %}" class="btn btn-secondary">Annuler</a>
 {% endblock %}
 
 {% block content %}
@@ -22,7 +22,7 @@
       <form action="" method="post">
         {% csrf_token %}
         <p class="text-center">
-          <input class="btn btn-default" type="submit" value="Confirmer la suppression" />
+          <input class="btn btn-danger" type="submit" value="Confirmer la suppression" />
         </p>
       </form>
     </div>
