--- a/templates/association/mandate/people_edit.html
+++ b/templates/association/mandate/people_edit.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'association-mandate-list' association.id %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
+  <a href="{% url 'association-mandate-list' association.id %}" class="btn btn-secondary"><i class="fa fa-times"></i> Annuler</a>
   <button form="peopleForm" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
 {% endblock %}
 
