--- a/templates/directory/opening_hour/delete.html
+++ b/templates/directory/opening_hour/delete.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'association-directory-detail' association.id %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
+  <a href="{% url 'association-directory-detail' association.id %}" class="btn btn-secondary"><i class="fa fa-times"></i> Annuler</a>
 {% endblock %}
 
 {% block content_association %}
@@ -19,7 +19,7 @@
       <form action="" method="post">
         {% csrf_token %}
         <p class="text-center">
-          <input class="btn btn-default" type="submit" value="Confirmer la suppression" />
+          <input class="btn btn-danger" type="submit" value="Confirmer la suppression" />
         </p>
       </form>
     </div>
