--- a/templates/file/resources/folders/create.html
+++ b/templates/file/resources/folders/create.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'resource-folder-list' %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
+  <a href="{% url 'resource-folder-list' %}" class="btn btn-secondary"><i class="fa fa-times"></i> Annuler</a>
   <button form="resource-folder-form" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
 {% endblock %}
 
