--- a/templates/file/resources/folders/delete.html
+++ b/templates/file/resources/folders/delete.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'resource-folder-list' %}" class="btn btn-default">Annuler</a>
+  <a href="{% url 'resource-folder-list' %}" class="btn btn-secondary">Annuler</a>
 {% endblock %}
 
 {% block content %}
@@ -19,7 +19,7 @@
       <form action="" method="post">
         {% csrf_token %}
         <p class="text-center">
-          <input class="btn btn-default" type="submit" value="Confirmer la suppression" />
+          <input class="btn btn-danger" type="submit" value="Confirmer la suppression" />
         </p>
       </form>
     </div>
