--- a/templates/member/password_update.html
+++ b/templates/member/password_update.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-<a href="{% url 'homepage' %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
+<a href="{% url 'homepage' %}" class="btn btn-secondary"><i class="fa fa-times"></i> Annuler</a>
 <button form="passwordForm" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
 {% endblock %}
 
