--- a/templates/newsletter/newsletter/update.html
+++ b/templates/newsletter/newsletter/update.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'newsletter-list' %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
+  <a href="{% url 'newsletter-list' %}" class="btn btn-secondary"><i class="fa fa-times"></i> Annuler</a>
   <button form="newsletterForm" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
 {% endblock %}
 
