--- a/templates/association/mandate/list.html
+++ b/templates/association/mandate/list.html
@@ -9,19 +9,18 @@
 {% endblock %}
 
 {% block content_association %}
-  <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  <div id="accordion" role="tablist">
     {% for mandate in object_list %}
-    <div class="panel {% if forloop.first %}panel-success{% else %}panel-default{% endif %}">
-      <div class="panel-heading" role="tab" id="heading{{ mandate.id }}">
-        <h4 class="panel-title">
-          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ mandate.id }}" aria-expanded="true" aria-controls="collapseOne">
-            Du {{ mandate.begins_at|date:"d/m/Y" }} au {{ mandate.ends_at|date:"d/m/Y" }}
-          </a>
+    <div class="card border-{% if forloop.first %}success{% else %}secondary{% endif %}">
+      <div class="card-header bg-{% if forloop.first %}success{% else %}secondary{% endif %} text-white" role="tab" id="heading{{ mandate.id }}">
+        <h5 class="mb-0">
+          <a class="text-white" data-toggle="collapse" href="#collapse{{ mandate.id }}" aria-expanded="true" aria-controls="collapse{{ mandate.id }}">
+            Du {{ mandate.begins_at|date:"d/m/Y" }} au {{ mandate.ends_at|date:"d/m/Y" }}</a>
           {% if forloop.first %}<small>(Mandat en cours)</small>{% endif %}
-        </h4>
+        </h5>
       </div>
-      <div id="collapse{{ mandate.id }}" class="panel-collapse collapse{% if forloop.first %} in{% endif %}" role="tabpanel" aria-labelledby="heading{{ mandate.id }}">
-        <div class="panel-body">
+      <div id="collapse{{ mandate.id }}" class="collapse{% if forloop.first %} show{% endif %}" role="tabpanel" aria-labelledby="heading{{ mandate.id }}">
+        <div class="card-body">
           <h5>Membres du bureau</h5>
           <table class="table table-bordered table-stripped">
             <thead>
