Update for BS4 : events

--- a/templates/event/association_event_list.html
+++ b/templates/event/association_event_list.html
@@ -13,8 +13,12 @@
 
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-      <li role="presentation" class="active"><a href="#current_or_coming" aria-controls="home" role="tab" data-toggle="tab">En cours ou à venir</a></li>
-      <li role="presentation"><a href="#past" aria-controls="profile" role="tab" data-toggle="tab">Passés</a></li>
+      <li role="presentation" class="nav-item">
+          <a class="nav-link active" href="#current_or_coming" aria-controls="home" role="tab" data-toggle="tab">En cours ou à venir</a>
+      </li>
+      <li role="presentation" class="nav-item">
+          <a class="nav-link" href="#past" aria-controls="profile" role="tab" data-toggle="tab">Passés</a>
+      </li>
     </ul>
 
     <!-- Tab panes -->
