--- a/templates/event/delete.html
+++ b/templates/event/delete.html
@@ -8,9 +8,9 @@
   <a href="{% url 'association-event-detail' association.id object.id %}" class="btn btn-secondary">Annuler</a>
 {% endblock %}
 
-{% block content %}
+{% block content_association %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-danger" role="alert">
         <b>Attention !</b> La suppression de l'événement <i>{{ object.name }}</i> entraînera sa <u>perte irréversible</u>.<br>
         Voulez-vous <u>vraiment</u> poursuivre ?
