Update for BS4 : event publish

--- a/templates/event/publish.html
+++ b/templates/event/publish.html
@@ -10,7 +10,7 @@
 
 {% block content_association %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-success" role="alert">
         Êtes-vous sûr de vouloir publier l'événement {{ event.name }} ?
       </div>
