--- a/templates/newsletter/newsletter/detail.html
+++ b/templates/newsletter/newsletter/detail.html
@@ -19,7 +19,7 @@
 {% block content %}
   {% if object.sent %}
     <div class="alert alert-success" role="alert">
-      Cette newsletter a déjà été envoyé.
+      Cette newsletter a déjà été envoyée.
     </div>
   {% else %}
     <div class="alert alert-warning" role="alert">
