--- a/templates/association/detail.html
+++ b/templates/association/detail.html
@@ -44,11 +44,19 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-3">
         <div class="col-md-12">
             <b>Description courte</b>
             <div class="card bg-light">
                 <div class="card-body">{{ object.description }}</div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <b>Logo</b>
+            <div class="card bg-light">
+                <div class="card-body">{{ object.logo_url }}</div>
             </div>
         </div>
     </div>
