--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load l10n %}
+
 {% block page_title %}
     Bot'INSA
 {% endblock %}
@@ -15,12 +17,119 @@
                 <div class="card-body">
                     <h4 class="card-title">
                         {{ asso.name }}
-                        {% if asso.acronym %}<small>{{ asso.acronym }}</small>{% endif %}
+                        {% if asso.acronym %}
+                            <small>{{ asso.acronym }}</small>
+                        {% endif %}
                     </h4>
                     <p class="card-text">{{ asso.description }}</p>
-                    <a href="#" class="btn btn-primary" role="button">En savoir plus...</a>
+                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                            data-target="#assoDetails{{ asso.id }}">
+                        Plus d'infos
+                    </button>
                 </div>
             </div>
         {% endfor %}
     </div>
+
+    <!-- Modal -->
+    {% for asso in associations %}
+        <div class="modal fade" id="assoDetails{{ asso.id }}" tabindex="-1" role="dialog"
+             aria-labelledby="assoDetailsLabel{{ asso.id }}"
+             aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="assoDetailsLabel{{ asso.id }}">{{ asso.name }}</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <h5>Description</h5>
+                        <p>
+                            {% if asso.current_directory_entry.description %}
+                                {{ asso.current_directory_entry.description|linebreaksbr }}
+                            {% else %}
+                                <em>Non défini</em>
+                            {% endif %}
+                        </p>
+
+                        <h5>Lieu</h5>
+                        <p>
+                            <i class="fa fa-fw fa-location-arrow"></i>
+                            {% if asso.current_directory_entry.place %}
+                                {% with place=asso.current_directory_entry.place %}
+                                <a href="http://www.google.com/maps/place/{{ place.loc_x|unlocalize }},{{ place.loc_y|unlocalize }}">
+                                    {{ place.name }}
+                                </a>
+                                {% endwith %}
+                            {% else %}
+                                <em>Non défini</em>
+                            {% endif %}
+                        </p>
+
+                        <h5>Contact</h5>
+                        <p>
+                            <i class="fa fa-fw fa-envelope-o"></i>
+                            {% if asso.current_directory_entry.contact_address %}
+                                <a href="mailto:{{ asso.current_directory_entry.contact_address }}">
+                                    {{ asso.current_directory_entry.contact_address }}
+                                </a>
+                            {% else %}
+                                <em>Non défini</em>
+                            {% endif %}<br>
+
+                            <i class="fa fa-fw fa-phone"></i>
+                            {% if asso.current_directory_entry.phone %}
+                                <a href="tel:{{ asso.current_directory_entry.phone }}">
+                                    {{ asso.current_directory_entry.phone }}
+                                </a>
+                            {% else %}
+                                <em>Non défini</em>
+                            {% endif %}
+                        </p>
+
+                        <h5>Site web</h5>
+                        <p>
+                            <i class="fa fa-fw fa-external-link"></i>
+                            {% if asso.current_directory_entry.website_url %}
+                                <a href="{{ asso.current_directory_entry.website_url }}">
+                                    {{ asso.current_directory_entry.website_url }}
+                                </a>
+                            {% else %}
+                                <em>Non défini</em>
+                            {% endif %}
+                        </p>
+
+                        <h5>Réseaux sociaux</h5>
+                        <p>
+                            <i class="fa fa-fw fa-facebook-f"></i>
+                            {% if asso.current_directory_entry.facebook_url %}
+                                <a href="{{ asso.current_directory_entry.facebook_url }}">
+                                    {{ asso.current_directory_entry.facebook_url }}
+                                </a>
+                            {% else %}
+                                <em>Non défini</em>
+                            {% endif %}
+                            <br>
+
+                            <i class="fa fa-fw fa-twitter"></i>
+                            {% if asso.current_directory_entry.twitter_url %}
+                                <a href="{{ asso.current_directory_entry.twitter_url }}">
+                                    {{ asso.current_directory_entry.twitter_url }}
+                                </a>
+                            {% else %}
+                                <em>Non défini</em>
+                            {% endif %}
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+
 {% endblock %}
